fix: fix: overflow: hidden Fixes #20 effect for contact me button

--- a/styles/pages/home.css
+++ b/styles/pages/home.css
@@ -55,7 +55,7 @@
 
   .why-cta {
     top: 570px;
-    left: 1230px;
+    left: 700px;
   }
 
   .why-arrow-1 {
